tests/errors/scalar_body_hook_raise.dang
# A raising new() hook surfaces as a materialization error at the slot.
scalar Upper {
  new(raw: String!) {
    if (raw != raw.toUpper) {
      raise `not upper: ${raw}`
    }
    raw
  }
}

let shouted: Upper! = "quiet"
